# word-cards

./: .env.example  .flake8  Makefile  pyproject.toml
apps/cards/: admin.py  filters.py  models.py  selectors.py  services.py  urls.py
apps/cards/apis/: cards.py  categories.py
apps/cards/migrations/: 0001_initial.py  0002_alter_category_options.py
apps/common/: models.py  pagination.py  permissions.py  utils.py
apps/users/: apis.py  services.py  urls.py
config/: settings.py  urls.py
